2007-10-08  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (pushdecl): Update file scope decl as well.
	* cgraph.c (cgraph_note_duplicate): Swap decl and duplicate when
	function already defined.
	* cgraphbuild.c (record_reference): Don't canonicalize decl.

2007-10-05  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (c_clear_binding_stack): Move early exit...
	(c_write_global_declarations): ... here.

2007-10-05  Tom Tromey  <tromey@redhat.com>

	* gdbinit.in (pt): Accept argument.

2007-10-04  Tom Tromey  <tromey@redhat.com>

	* toplev.c (char_p): New typedef.
	(job_arguments): New global.
	(server_callback): GC-copy arguments.

2007-10-04  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (bind): Note a smash when needed.
	(c_decl_re_bind): Pass function definitions to
	cgraph_finalize_function.
	(c_builtin_function): Don't use decl's TREE_CHAIN for
	visible_builtins linked list.
	(push_file_scope): Update.
	(duplicate_decls): Also avoid smashing objects in external scope.
	(start_function): Don't call c_parser_note_smash.
	* toplev.c (start_as): Fix argv argument to pex_run.

2007-10-01  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_parser_translation_unit): Make next_token a
	local.
	* c-lex.c (fe_file_change): Mark main file as user-owned.

2007-10-01  Tom Tromey  <tromey@redhat.com>

	* toplev.c (server_callback): Reset errorcount and sorrycount.

2007-09-28  Tom Tromey  <tromey@redhat.com>
	    Michael Matz  <matz@suse.de>

	* c-gimplify.c (c_genericize): Don't call gimplify_function_tree.
	(c_gimplify_expr): Handle CALL_EXPR, FDESC_EXPR, and ADDR_EXPR.
	* tree-optimize.c (tree_lowering_passes): Call
	gimplify_function_tree.
	* c-decl.c (pop_file_scope): Don't call
	cgraph_finalize_compilation_unit.
	(finish_function): Don't call c_gimple_diagnostics_recursively.
	* toplev.c (compile_file): Call cgraph_finalize_compilation_unit.
	* cgraphunit.c (verify_cgraph_node): Reverted.
	* cgraph.h (cgraph_get_callee_fndecl): Removed.