@@ -59,7 +59,7 @@ record_reference (tree *tp, int *walk_subtrees, void *data)
 	     functions reachable unconditionally.  */
 	  tree decl = TREE_OPERAND (*tp, 0);
 	  if (TREE_CODE (decl) == FUNCTION_DECL)
-	    cgraph_mark_needed_node (cgraph_node (decl));
+	    cgraph_mark_needed_node (cgraph_node (cgraph_canonical_decl (decl)));
 	}
       break;
 
